[project]
name = "evernote2md"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
dependencies = [
    "markdownify>=0.13.1",
    "pytz>=2024.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
evernote2md = "evernote2md.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/evernote2md"]
