[project]
name = "evernote2md"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
dependencies = [
    "markdownify>=0.13.1",
    "pytz>=2024.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
evernote2md = "evernote2md.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=4.0.1",
    "mypy>=1.12.0",
    "types-beautifulsoup4>=4.12.0.20240907",
    "types-pytz>=2024.2.0.20241003",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/evernote2md"]
